# pdf_parser

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.async  LICENSE  README.md  config.py  docker-compose.async.yml  docker-compose.services.yml  docker-compose.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements-torch.txt  requirements.txt
app/: __init__.py  dependencies.py  main.py  schemas.py
app/routers/: __init__.py  async_jobs.py  process.py  semantic_search.py  webhooks.py
output/: .gitkeep
scripts/: backfill_documents.py  celery_worker.py  check_setup.py  deploy.sh  llm_postprocess.py  process_single.py  test_e2e_async_semantic.py
services/: app.py  document_store.py
services/agent/: agent.py  llm_client.py  prompts.py  tools.py
services/ingest_api/: app.py  redis_store.py  schemas.py  store.py
services/ingest_ui/: app.py
services/search/: __init__.py  chroma_store.py  chunk_builder.py  embedding_client.py  factory.py  service.py
services/worker/: ocr_worker.py  run.py
specs/: async-job-plan.md  multi-tenant-architecture.md  project-structure.md
src/: __init__.py  celery_worker.py  database.py  detector.py  embeddings.py  pipeline.py
src/exporters/: searchable_pdf.py
src/extractors/: __init__.py  digital.py  ocr.py  ocr_tesseract.py  tables.py
src/models/: __init__.py  mongodb.py  schemas.py
src/preprocessing/: __init__.py  image_enhancer.py
src/search/: chunker.py  vector_store.py
src/utils/: __init__.py  bbox.py  ocr_postprocess.py  text_normalizer.py
tests/: conftest.py  test_agent.py  test_agent_endpoint.py  test_agent_tools.py  test_api.py  test_async_jobs.py  test_celery_worker.py  test_chroma_store.py  test_chunk_builder.py  test_chunker.py  test_config.py  test_database.py  test_deploy.py  test_document_store.py  test_embedding_client.py  test_embeddings.py  test_embeddings_config.py  test_generate_artifacts.py  test_ingest_api.py  test_ingest_ui.py  test_list_endpoints.py  test_llm_client.py  test_ocr_worker.py  test_redis_store.py  test_search_endpoint.py  test_search_schemas.py  test_search_service.py  test_searchable_pdf.py  test_semantic_integration.py  test_ui_frontend.py  test_vector_store.py
